--- a/Hackathon/blog.html
+++ b/Hackathon/blog.html
@@ -22,7 +22,7 @@
       <div class="navbar-right">
         <ul class="nav">
           <li class="nav-item d-none d-lg-block ">
-            <a class="nav-link" href="#"><i class="fa fa-home"></i></a>
+            <a class="nav-link" href="index.html"><i class="fa fa-home"></i></a>
           </li>
           <li class="nav-item d-none d-lg-block">
             <a class="nav-link" href="blog.html">BLOG</a>
@@ -63,7 +63,7 @@
   <div class="dropdown-menu dropdown-menu-right">
     <a href="#"><button type="button" class="btn btn-primary d-sm-none">Need Help</button></a>
     <div class="dropdown-divider d-sm-none"></div>
-    <a class="dropdown-item text-center " href="#">HOME</a>
+    <a class="dropdown-item text-center " href="index.html">HOME</a>
     <div class="dropdown-divider "></div>
     <a class="dropdown-item active text-center " href="blog.html">BLOG</a>
     <div class="dropdown-divider "></div>
@@ -78,25 +78,60 @@
         </ul>
         <ul class="nav">
           <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" href="understandingabuse.html">UNDERSTANDING ABUSE |</a>
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample" href="">UNDERSTANDING ABUSE |</a>
+            <div class="collapse" id="understandingabuseExample">
+                            <div class="card card-body">
+                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                             </div>
+                        </div>
+          </li>  
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample" href="">REPORT ISSUE |</a>
+            <div class="collapse" id="reportissueExample">
+                            <div class="card card-body">
+                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                             </div>
+                        </div>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" href="reportissues.html">REPORT ISSUES |</a>
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample" href="">GET SUPPORT |</a>
+            <div class="collapse" id="getsupportExample">
+                            <div class="card card-body">
+                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                             </div>
+                        </div>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" href="getsupport.html">GET SUPPORT |</a>
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample" href="">HEALTHY RELATIONSHIPS |</a>
+            <div class="collapse" id="healthyrelationshipsExample">
+                            <div class="card card-body">
+                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                             </div>
+                        </div>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" href="healthyrelationships.html">HEALTHY RELATIONSHIPS |</a>
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample" href="">AWARENESS |</a>
+            <div class="collapse" id="awarenessExample">
+                            <div class="card card-body">
+                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                             </div>
+                        </div>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" href="awareness.html">AWARENESS |</a>
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample" href="">WHO WE ARE |</a>
+            <div class="collapse" id="whoweareExample">
+                            <div class="card card-body">
+                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                             </div>
+                        </div>
           </li>
           <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" href="whoweare.html">WHO WE ARE |</a>
-          </li>
-          <li class="nav-item d-none d-lg-block">
-            <a style="color: #0000b3;" class="nav-link" href="getinvolved.html">GET INVOLVED |</a>
+            <a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample" href="">GET  INVOLVED |</a>
+            <div class="collapse" id="getinvolvedExample">
+                            <div class="card card-body">
+                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                             </div>
+                        </div>
           </li>
           <li class="nav-item d-none d-lg-block">
             <a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
