--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -22,7 +22,7 @@
 			<div class="navbar-right">
 				<ul class="nav">
 					<li class="nav-item d-none d-lg-block ">
-						<a class="nav-link" href="#"><i class="fa fa-home"></i></a>
+						<a class="nav-link" href="index.html"><i class="fa fa-home"></i></a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
 						<a class="nav-link" href="blog.html">BLOG</a>
@@ -63,7 +63,7 @@
   <div class="dropdown-menu dropdown-menu-right">
   	<a href="#"><button type="button" class="btn btn-primary d-sm-none">Need Help</button></a>
   	<div class="dropdown-divider d-sm-none"></div>
-    <a class="dropdown-item active text-center " href="#">HOME</a>
+    <a class="dropdown-item active text-center " href="index.html">HOME</a>
     <div class="dropdown-divider "></div>
     <a class="dropdown-item text-center " href="blog.html">BLOG</a>
     <div class="dropdown-divider "></div>
@@ -77,28 +77,446 @@
 					</li>
 				</ul>
 				<ul class="nav">
-					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="understandingabuse.html">UNDERSTANDING ABUSE |</a>
+					<li class="nav-item d-none d-md-block">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE |</a>
+						<div class="collapse" id="understandingabuseExample">
+							<div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
+					</li>  
+					<li class="nav-item d-none d-md-block">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUE |</a>
+						<div class="collapse" id="reportissueExample">
+                            <div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
 					</li>
-					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="reportissues.html">REPORT ISSUES |</a>
+					<li class="nav-item d-none d-md-block">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT |</a>
+						<div class="collapse" id="getsupportExample">
+                            <div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
 					</li>
-					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="getsupport.html">GET SUPPORT |</a>
+					<li class="nav-item d-none d-md-block">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS |</a>
+						<div class="collapse" id="healthyrelationshipsExample">
+                            <div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
 					</li>
-					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="healthyrelationships.html">HEALTHY RELATIONSHIPS |</a>
+					<li class="nav-item d-none d-md-block">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS |</a>
+						<div class="collapse" id="awarenessExample">
+                            <div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
 					</li>
-					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="awareness.html">AWARENESS |</a>
+					<li class="nav-item d-none d-md-block">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE |</a>
+						<div class="collapse" id="whoweareExample">
+                            <div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
 					</li>
-					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="whoweare.html">WHO WE ARE |</a>
+					<li class="nav-item d-none d-md-block">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED |</a>
+						<div class="collapse" id="getinvolvedExample">
+							<div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
 					</li>
-					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="getinvolved.html">GET INVOLVED |</a>
+					<li class="nav-item d-none d-md-block">
+						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
 					</li>
-					<li class="nav-item d-none d-lg-block">
+				</ul>
+				<ul class="d-md-none">
+					<li class="nav-item">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE |</a>
+						<div class="collapse" id="understandingabuseExample">
+							<div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
+					</li>  
+					<li class="nav-item">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUE |</a>
+						<div class="collapse" id="reportissueExample">
+                            <div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
+					</li>
+					<li class="nav-item">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT |</a>
+						<div class="collapse" id="getsupportExample">
+                            <div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
+					</li>
+					<li class="nav-item">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS |</a>
+						<div class="collapse" id="healthyrelationshipsExample">
+                            <div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
+					</li>
+					<li class="nav-item">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS |</a>
+						<div class="collapse" id="awarenessExample">
+                            <div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
+					</li>
+					<li class="nav-item">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE |</a>
+						<div class="collapse" id="whoweareExample">
+                            <div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
+					</li>
+					<li class="nav-item">
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED |</a>
+						<div class="collapse" id="getinvolvedExample">
+							<div class="row">
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="card card-body">
+										Hello
+										I am studying in MIT Manipal,CSE 2nd yr in B section
+									</div>
+								</div>
+                            </div>
+                        </div>
+					</li>
+					<li class="nav-item">
 						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
 					</li>
 				</ul>
@@ -106,7 +524,7 @@
 			
 			</div>
 		</nav>
-	<div class="container-fluid backgroundimg">
+	<div style="border-radius: 10px;" class="container-fluid backgroundimg">
 		<h1 class="imp">Some things has to change as per present Situatons</h1>
 		<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.</p>
 		<a href="#"><button type="button" class="btn btn-primary" >How to Start ?</button></a>
