--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="styles.css">
 <head>
 	<title> Justice For women </title>
-	<link rel = "icon" href = "profile.jpeg" type = "image/x-icon">
+	<link rel = "icon" href = "profile.jpg" type = "image/x-icon">
 </head>
 <body>
 		<nav class="navbar sticky-top ">
@@ -18,9 +18,9 @@
         </nav>
 		<nav class="navbar navbar-expand-sm">
 			<div class="container-fluid">
-			<img style="width: 130px;" src="profile.jpeg"  >
+			<img style="width: 130px;" src="profile.jpg"  >
 			<div class="navbar-right">
-				<ul class="nav">
+				<ul style="text-decoration: none;" class="nav">
 					<li class="nav-item d-none d-lg-block ">
 						<a class="nav-link" href="index.html"><i class="fa fa-home"></i></a>
 					</li>
@@ -82,28 +82,57 @@
 						<div class="collapse" id="understandingabuseExample">
 							<div class="row">
 								<div class="col-md-3">
-									<div class="card card-body">
-										Hello
-										I am studying in MIT Manipal,CSE 2nd yr in B section
+									<a style="color: #0000b3;" href="#">
+									<div style="background-color: #0000b3; color: white;" class="card card-body">
+										<h3>What's up dudooo ?</h3>
+										<p>Your issue may be anything and do contact us for your issue</p>
 									</div>
+								    </a>
 								</div>
 								<div class="col-md-3">
 									<div class="card card-body">
-										Hello
-										I am studying in MIT Manipal,CSE 2nd yr in B section
+										<ul>
+											<li>
+												<a style="color: #0000b3;" href="#">Issue 1</a>
+												<hr>
+											</li>
+											<li>
+												<a style="color: #0000b3;" href="#">Issue 2</a>
+												<hr>
+											</li>
+											<li>
+												<a style="color: #0000b3;" href="#">Issue 3</a>
+												<hr>
+											</li>
+											<li>
+												<a style="color: #0000b3;" href="#">Issue 4</a>
+												<hr>
+											</li>
+											<li>
+												<a style="color: #0000b3;" href="#">Issue 5</a>
+												<hr>
+											</li>
+											<li>
+												<a style="color: #0000b3;" href="#">Issue 6</a>
+											</li>
+										</ul>
 									</div>
 								</div>
 								<div class="col-md-3">
+									<a style="color: #0000b3;" href="#">
 									<div class="card card-body">
-										Hello
-										I am studying in MIT Manipal,CSE 2nd yr in B section
+										<img src="#">
+										<p>info abt pic</p>
 									</div>
+								    </a>
 								</div>
 								<div class="col-md-3">
+									<a style="color: #0000b3;" href="#">
 									<div class="card card-body">
-										Hello
-										I am studying in MIT Manipal,CSE 2nd yr in B section
+										<img src="#">
+										<p>info abt pic</p>
 									</div>
+								    </a>
 								</div>
                             </div>
                         </div>
@@ -300,38 +329,68 @@
 				</ul>
 				<ul class="d-md-none">
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE |</a>
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#understandingabuseExample" role="button" aria-expanded="false" aria-controls="understandingabuseExample">UNDERSTANDING ABUSE </a>
 						<div class="collapse" id="understandingabuseExample">
 							<div class="row">
 								<div class="col-md-3">
-									<div class="card card-body">
-										Hello
-										I am studying in MIT Manipal,CSE 2nd yr in B section
+									<a style="color: #0000b3;" href="#">
+									<div style="background-color: #0000b3; color: white;" class="card card-body">
+										<h3>What's up dudooo ?</h3>
+										<p>Your issue may be anything and do contact us for your issue</p>
 									</div>
+								    </a>
 								</div>
 								<div class="col-md-3">
 									<div class="card card-body">
-										Hello
-										I am studying in MIT Manipal,CSE 2nd yr in B section
+										<ul>
+											<li>
+												<a style="color: #0000b3;" href="#">Issue 1</a>
+												<hr>
+											</li>
+											<li>
+												<a style="color: #0000b3;" href="#">Issue 2</a>
+												<hr>
+											</li>
+											<li>
+												<a style="color: #0000b3;" href="#">Issue 3</a>
+												<hr>
+											</li>
+											<li>
+												<a style="color: #0000b3;" href="#">Issue 4</a>
+												<hr>
+											</li>
+											<li>
+												<a style="color: #0000b3;" href="#">Issue 5</a>
+												<hr>
+											</li>
+											<li>
+												<a style="color: #0000b3;" href="#">Issue 6</a>
+											</li>
+										</ul>
 									</div>
 								</div>
 								<div class="col-md-3">
+									<a style="color: #0000b3;" href="#">
 									<div class="card card-body">
-										Hello
-										I am studying in MIT Manipal,CSE 2nd yr in B section
+										<img src="#">
+										<p>info abt pic</p>
 									</div>
+								    </a>
 								</div>
 								<div class="col-md-3">
+									<a style="color: #0000b3;" href="#">
 									<div class="card card-body">
-										Hello
-										I am studying in MIT Manipal,CSE 2nd yr in B section
+										<img src="#">
+										<p>info abt pic</p>
 									</div>
+								    </a>
 								</div>
                             </div>
                         </div>
+                        <hr>
 					</li>  
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUE |</a>
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#reportissueExample" role="button" aria-expanded="false" aria-controls="reportissueExample">REPORT ISSUE</a>
 						<div class="collapse" id="reportissueExample">
                             <div class="row">
 								<div class="col-md-3">
@@ -360,9 +419,10 @@
 								</div>
                             </div>
                         </div>
+                        <hr>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT |</a>
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getsupportExample" role="button" aria-expanded="false" aria-controls="getsupportExample">GET SUPPORT</a>
 						<div class="collapse" id="getsupportExample">
                             <div class="row">
 								<div class="col-md-3">
@@ -391,9 +451,10 @@
 								</div>
                             </div>
                         </div>
+                        <hr>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS |</a>
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#healthyrelationshipsExample" role="button" aria-expanded="false" aria-controls="healthyrelationshipsExample">HEALTHY RELATIONSHIPS</a>
 						<div class="collapse" id="healthyrelationshipsExample">
                             <div class="row">
 								<div class="col-md-3">
@@ -422,9 +483,10 @@
 								</div>
                             </div>
                         </div>
+                        <hr>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS |</a>
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#awarenessExample" role="button" aria-expanded="false" aria-controls="awarenessExample">AWARENESS</a>
 						<div class="collapse" id="awarenessExample">
                             <div class="row">
 								<div class="col-md-3">
@@ -453,9 +515,10 @@
 								</div>
                             </div>
                         </div>
+                        <hr>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE |</a>
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#whoweareExample" role="button" aria-expanded="false" aria-controls="whoweareExample">WHO WE ARE</a>
 						<div class="collapse" id="whoweareExample">
                             <div class="row">
 								<div class="col-md-3">
@@ -484,9 +547,10 @@
 								</div>
                             </div>
                         </div>
+                        <hr>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED |</a>
+						<a style="color: #0000b3;" class="nav-link" data-toggle="collapse" href="#getinvolvedExample" role="button" aria-expanded="false" aria-controls="getinvolvedExample">GET INVOLVED</a>
 						<div class="collapse" id="getinvolvedExample">
 							<div class="row">
 								<div class="col-md-3">
@@ -515,6 +579,7 @@
 								</div>
                             </div>
                         </div>
+                        <hr>
 					</li>
 					<li class="nav-item">
 						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
@@ -578,22 +643,22 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="profile.jpeg" alt="First slide">
-      <div class="carousel-caption d-none d-md-block">
+      <img class="d-block w-100" src="profile.jpg" alt="First slide">
+      <div class="carousel-caption">
       	<h3>Hi Guys </h3>
       	<p>heheehyhhhbdcsh</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="profile.jpeg" alt="Second slide">
-       <div class="carousel-caption d-none d-md-block">
+      <img class="d-block w-100" src="profile.jpg" alt="Second slide">
+       <div class="carousel-caption">
        	<h3>Hi Guys </h3>
        	<p>heheehyhhhbdcsh</p>
        </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="profile.jpeg" alt="Third slide">
-       <div class="carousel-caption d-none d-md-block">
+      <img class="d-block w-100" src="profile.jpg" alt="Third slide">
+       <div class="carousel-caption">
        	<h3>Hi Guys </h3>
        	<p>heheehyhhhbdcsh</p>
        </div>
