--- a/Hackathon/blog.html
+++ b/Hackathon/blog.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="styles.css">
 <head>
 	<title> Blog </title>
-	<link rel = "icon" href = "profile.jpeg" type = "image/x-icon">
+	<link rel = "icon" href = "profile.jpg" type = "image/x-icon">
 </head>
 <body>
 	<nav class="navbar sticky-top ">
@@ -18,7 +18,7 @@
         </nav>
         <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
-      <img style="width: 130px;" src="profile.jpeg"  >
+      <img style="width: 130px;" src="profile.jpg"  >
       <div class="navbar-right">
         <ul class="nav">
           <li class="nav-item d-none d-lg-block ">
