--- a/Hackathon/newsandmedia.html
+++ b/Hackathon/newsandmedia.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="styles.css">
 <head>
 	<title> News & Media </title>
-	<link rel = "icon" href = "profile.jpeg" type = "image/x-icon">
+	<link rel = "icon" href = "profile.jpg" type = "image/x-icon">
 </head>
 <body>
 	<nav class="navbar sticky-top ">
