--- a/Hackathon/yourstories.html
+++ b/Hackathon/yourstories.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="yourstories.html">YOUR STORIES</a>
           </li>
           <li class="nav-item">
-            <a href="#"><button type="button" class="btn btn-success" >DONATE</button></a>
+            <a href="donate.html"><button type="button" class="btn btn-success" >DONATE</button></a>
           </li>
           <li class="nav-item">
             <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
