--- a/Hackathon/donate.html
+++ b/Hackathon/donate.html
@@ -17,7 +17,12 @@
     </a>
     <a style="color: #0000b3;" href="index.html"><h3>Back To Home Page ></h3></a>
   </nav>
-  <img style="width: 100% ; height: 300px;" src="donatepic.jpg">
+  <img style="width: 100% ;" src="donatepic.jpg">
+  <div class="container">
+    <h2>DONATE TO US!</h2>
+    <h5 style="text-align: center;">YOU CAN BRING <strong>HOPE</strong> TO SOME PEOPLE WHO ARE BEING AFFECTED</h5>
+    <p style="text-align: center;">Your donation helps us to fund various vital programs and help people</p>
+  </div>
 <footer>
   <div class="container">
     <ul class="nav">
